src/cli/snapshots/rtx__cli__r#use__tests__use_global-2.snap
---
source: src/cli/use.rs
expression: "file::read_to_string(&cf_path).unwrap()"
---
[tools]
tiny = "2"

