src/cli/snapshots/rtx__cli__r#use__tests__use_local-2.snap
---
source: src/cli/use.rs
expression: "fs::read_to_string(&cf_path).unwrap()"
---
[tools]
tiny = "3.1.0"

