src/cli/snapshots/rtx__cli__r#use__tests__use_local-3.snap
---
source: src/cli/use.rs
expression: "fs::read_to_string(&cf_path).unwrap()"
---
[tools]
tiny = "2"

